salesforce-litle-MP/src/objects/Litle_Principal__c.object
<CustomObject>
    <description>Stores the principal details of the KYC information</description>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of the Principal</description>
        <inlineHelpText>First Name of the Principal</inlineHelpText>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the Principal</description>
        <inlineHelpText>Last Name of the Principal</inlineHelpText>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litle_KYC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent KYC of the Principal</description>
        <inlineHelpText>Parent KYC of the Principal</inlineHelpText>
        <label>Litle KYC</label>
        <referenceTo>Litle_KYC__c</referenceTo>
        <relationshipLabel>Litle Principals</relationshipLabel>
        <relationshipName>Litle_Principals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal_Id__c</fullName>
        <description>Principal Id of the Principal</description>
        <inlineHelpText>Principal Id of the Principal</inlineHelpText>
        <label>Principal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Litle Principal</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Litle Principal Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litle Principals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>